tests/NormalTests/paczka1/fuzzy1/53751259.err
Error in line 3: NP4tQJ4t6 A287 78,4
Error in line 2: 6GBfTn54b S709 66,6
Error in line 7: 6GBfTn54b A287 60,8
Error in line 8: ug5zsRIpXoS S709 81,8
Error in line 14: ug5zsRIpXoS A287 74,9
Error in line 17: ug5zsRIpXoS S709 18,8
